[package]
name = "usbrawmap"
version = "0.1.0"
edition = "2021"
authors = ["Tom Niget <niget.tom@gmail.com>"]
homepage = "https://github.com/zdimension/usbrawmap"
repository = "https://github.com/zdimension/usbrawmap"
license = "MIT"

[dependencies]
bitflags = "1.3.2"
pcap-parser = "0.14.0"
pnet_packet = "0.30.0"
phf = { version = "0.10.1", features = ["macros"] }
serde = { version = "1.0.137", features = ["derive"] }
figment = { version = "0.10.6", features = ["toml"] }
anyhow = "1.0.57"
thiserror = "1.0.31"
lazy_static = "1.4.0"
config-file = "0.2.3"
widestring = "0.5.1"

[dependencies.windows]
version = "0.37.0"
features = ["Win32_System_IO", "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Security", "Win32_System_Ioctl", "Win32_System_WindowsProgramming", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"]
